# web-htop

./: .gitignore  Cargo.toml
htop-preact/: .gitignore  index.html  package-lock.json  package.json
htop-preact/src/: index.tsx
htop-preact/src/components/: Header.tsx
htop-preact/src/pages/Algorithms/: index.tsx  stream_scrollbox.tsx  style.css
htop-preact/src/pages/HTOP/: index.tsx  style.css
src/: Readme  algorithms.rs  index.html  main.rs
web/: index.html  index.mjs
web/static/: style.css
