[package]
name = "web-htop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version="0.7.5", features = ["macros"] }
mime_guess = "2.0.4"
nix = { version="0.28.0", features = ["user"] }
serde = { version="1.0.200", features = ["derive"] }
sysinfo = "0.30.11"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version="0.5.2", features = ["cors"] }
